- phoromatic: Allow for system identifier variable in benchmark tickets of .SYSTEM
- phoromatic: Allow for system identifier variable in benchmark tickets of .GROUP
- phoromatic: Allow tickets to be removed from the individual benchmark page
- phoromatic: Allow creating new group accounts from the rootadmin page

Phoronix Test Suite 5.6 Milestone 3
15 February 2015

- phoromatic: Allow triggers to be deleted
- phoromatic: Rely on caching for determining pre-existing cached test profiles from the web UI
- phoromatic: Add result RSS support
- phoromatic: Add new option to results page
- phoromatic: Enforce new PTS sign-on whenever the PTS core version changes due to potential interface changes
- phoromatic: Working build suite page
- phoromatic: Add support for local suites page
- phoromatic: Add benchmark page
- phoromatic: Add support for viewing issued benchmark tickets
- phoromatic: Add option to force rebuild of results databases
- phoromatic: Prepend system ID to result string when running multiple tests without variables
- phoromatic: Add "Test All Options" opton to build suite page

Phoronix Test Suite 5.6 Milestone 2
4 February 2015

- pts-core: Various fixes
- pts-core: Deb/RPM build packaging improvements.
- pts-core: Add Markdown Readme file
- pts-core: Add hidden ?seed_accountid= option to the welcome / account creation page for custom 6 character ID
- pts-core: Fix for session save path on Fedora when running as normal user
- pts-core: Import copy of FPDF locally for PDF rendering
- phoromatic: Add a public view of test results by going to result page entry -> Result Export -> Public Viewer
- phoromatic: Add basic "Upload To OpenBenchmarking.org" link from test result page
- phoromatic: Allow users to reset their own password by navigating to the settings page
- phoromatic: Add "group name" concept to Phoromatic group of accounts
- phoromatic: Improved formatting of the public-viewer page
- phoromatic: Allow downloading results as PDF