@@ -8,6 +8,7 @@ Phoronix Test Suite (Git)
 - phoromatic: Allow for system identifier variable in benchmark tickets of .GROUP
 - phoromatic: Allow tickets to be removed from the individual benchmark page
 - phoromatic: Allow creating new group accounts from the rootadmin page
+- phoromatic: Add support for repeating tickets
 
 Phoronix Test Suite 5.6 Milestone 3
 15 February 2015
